--- a/assets/section-contact-form.css
+++ b/assets/section-contact-form.css
@@ -7,43 +7,40 @@
   border-width: 1px;
   border-color: #fff;
   padding: 30px; */
-
 }
 
-#ContactForm{
+#ContactForm {
   width: 100%;
-    height: 40vh;
+  height: 40vh;
   background-color: #040a5bb8;
   border-radius: 50px;
-   border-style: solid;
+  border-style: solid;
   border-width: 1px;
   border-color: #fff;
   padding: 30px;
 }
-@media(max-width: 989px){
-  #ContactForm{
-  width: calc(100% - 160px);
+@media (max-width: 989px) {
+  #ContactForm {
+    width: calc(100% - 160px);
     margin: auto;
+  }
 }
-}
-@media(max-width: 500px){
-  #ContactForm{
-  width: calc(100% - 120px);
-}
+@media (max-width: 500px) {
+  #ContactForm {
+    width: calc(100% - 100px);
+  }
 }
 .contact__sub {
   height: 100%;
   display: flex;
   flex-direction: column;
-justify-content: space-between;
+  justify-content: space-between;
   padding: 30px;
-
 }
 
-  .contact .button {
-    padding: 0;
-
-  }
+.contact .button {
+  padding: 0;
+}
 
 .contact img {
   max-width: 100%;
@@ -90,7 +87,6 @@ justify-content: space-between;
   text-decoration: underline;
 }
 
-
 .field__parent {
   display: flex;
   flex-direction: column;
@@ -106,43 +102,41 @@ justify-content: space-between;
 }
 
 .button__parent .button {
-  content: "";
+  content: '';
   position: relative;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
-    border-radius: 0;
-    box-shadow: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  border-radius: 0;
+  box-shadow: none;
 }
 
 .button__parent .button:before {
-  content: "";
-    position: relative;
+  content: '';
+  position: relative;
 
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 0;
-    box-shadow: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 0;
+  box-shadow: none;
 }
 
 .button__parent .button:after {
-  content: "";
-    position: relative;
+  content: '';
+  position: relative;
 
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 0;
-    box-shadow: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 0;
+  box-shadow: none;
   background-color: #000;
 }
-
-
 
 .contact-divider {
   padding: 0;
@@ -153,18 +147,16 @@ justify-content: space-between;
 .contact .field {
   display: flex;
   flex-direction: row;
-      flex-wrap: nowrap !important;
+  flex-wrap: nowrap !important;
   height: fit-content;
   justify-content: center;
   align-items: center;
-
 }
 
 .contact .field--with-error {
   display: flex;
   flex-direction: row;
-      flex-wrap: nowrap;
-
+  flex-wrap: nowrap;
 }
 
 .text-area::placeholder {
@@ -182,8 +174,7 @@ justify-content: space-between;
 }
 
 .contact .text-area {
-    /* margin-left: 3.5rem; */
-
+  /* margin-left: 3.5rem; */
 }
 
 .contact .field__input:hover,
@@ -201,7 +192,7 @@ justify-content: space-between;
 .contact .field:focus-within:after {
   box-shadow: none !important;
   border: none !important;
-    font-size: 1rem !important;  /* Stop size change */
+  font-size: 1rem !important; /* Stop size change */
   transform: none !important;
 }
 
@@ -209,13 +200,14 @@ justify-content: space-between;
   display: none;
 }
 
-.contact__sub .h-captcha { display: none}
-.contact .field p{
+.contact__sub .h-captcha {
+  display: none;
+}
+.contact .field p {
   padding-left: 0;
 }
 @media screen and (max-width: 500px) {
-
-/* #ContactForm{
+  /* #ContactForm{
   padding: 30px;
 } */
   .contact__sub {
@@ -228,15 +220,13 @@ justify-content: space-between;
   .contact .field__input {
     padding: 5px;
     height: fit-content;
-  
   }
 
-.contact .form__message {
+  .contact .form__message {
     align-items: center;
     justify-content: center;
     margin: 1rem;
-
-}
+  }
 
   .contact-divider p {
     margin-top: 5px;
@@ -246,9 +236,8 @@ justify-content: space-between;
   .contact__fields {
     /* margin-top: 1.2rem; */
   }
-/* 
+  /* 
 .contact .text-area {
     margin-left: 0;
 } */
-
 }
